Delete Characters to Make Fancy String